		now always checked for missing FMPT, TOPT and INTL kludges and
		they are inserted when missing.
		The checkdupe switch also work in uucp mode (mbnews).
		The code for mbmail is now merged into mbfido. A symlink from
		mbmail to mbfido is created to let mbfido run in mail mode.
		The syntax to call mbmail is changed.
		Implemented processing ^aFLAGS for received netmail (FSC-0053).

	mbmail:
		Obsolete, the functions are now in mbfido.

	mbtask:
		Removed all references to the Memwatch debugger, mbtask is oke
		but the debugger fills up the harddisk (very fast).
		Does now respond again to external semafore's mailout, mailin
		and scanout in the semafore directory.
		Removes stale socket file if found.

	mbpasswd:
		Added CLOSE_SESSIONS and ENV_ROOTPATH to getdef to prevent new
		user error messages on some distributions.
		Ported to work on FreeBSD.

	mbindex:
		Patched by Ken Bowley to prevent a crash when the 300 baud 
		field is the last item on the nodelist line.

	mbmon:
		Changed the rawio to termios style instead of termio.
		Shows the OS name in the info screen.

	mbsetup:
		Shows the OS name in the info screen.
		Creates default tty records with tty names for the right
		OS (I hope).
		Fixed a bug in the menu editor, deleted menus were not really
		deleted.
		Added setup items for the menu Display colors.

	mbcico:
		Renamed sendfile function in zmsend.c to sendzfile to prevent a
		conflict with an excisting library call on FreeBSD.

	mball:
		Removed some compiler warnings on some systems.

	mbsebbs:
		Removed some compiler warnings on some systems.
		Added menu Display lines.
		Added menu item 21, display text only.
		When a user has no download files limit and no download Kbytes
		limit he may download unlimited.
		When a user has no timelimit set in the limits, he will get
		a 24 hours session limit.

	mbuseradd:
		Ported to work on FreeBSD.

	mbpasswd:
		Ported to work on FreeBSD.

	htmldoc:
		Upgraded the FTSC documents to the current state.

